MDEXP-682 Initial commit